tests/error/add_fun.mml
let f x = x 2 in f 2 + f 3
